# threadslab

task1/: CmakeLists.txt  README.md  main.cpp
task1/include/: PrimeInteger.hpp
task1/src/: PrimeInteger.cpp
task10/: README.md  main.cpp
task11/: CMakeLists.txt  README.md  main.cpp
task2/: README.md
task4/: README.md  main.cpp
task5/: README.md  main.cpp
task6/: CMakeLists.txt  README.md  main.cpp
task7/: CMakeLists.txt  main.cpp  text.txt
task8/: CMakeLists.txt  README.md  main.cpp
task9/: README.md  main.cpp
